# polars_io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pdoc.yml
src/polars_io/: __init__.py  common.py  fixed_width.py  sas.py  stata.py
tests/: __init__.py  conftest.py  test_dta.py  test_fixed_width.py  test_lazy.py  test_pyreadstat.py  test_sas.py  test_xpt.py
