[project]
name = "polars-io"
version = "0.1.0"
description = "Lazy and eager reading of Stata and SAS files into Polars"
readme = "README.md"
authors = [
    { name = "Alistair Pattison", email = "alistairpattison@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.31.0",
    "pyreadstat>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
